--- a/cmd/web-app/templates/layouts/base.gohtml
+++ b/cmd/web-app/templates/layouts/base.gohtml
@@ -12,7 +12,8 @@
         <meta name="description" content="Remote online interactive teaching and learning platform.">
         <meta name="author" content="Merry World Media">
 
-        <link rel="icon" type="image/png" sizes="16x16" href="{{ SiteAssetUrl "/images/remote-school-icon.png" }}">
+        <link rel="shortcut icon" type="image/jpeg" href="{{ SiteAssetUrl "/images/smarthead/smarthead-logo.jpeg" }}">
+        <link rel="icon" type="image/jpeg" href="{{ SiteAssetUrl "/images/smarthead/smarthead-logo.jpeg" }}">
         <!-- ============================================================== -->
         <!-- Custom fonts for this template                                 -->
         <!-- ============================================================== -->
@@ -30,7 +31,6 @@
 
         gtag('config', 'UA-158909227-2');
         </script>
-
 
         <!-- ============================================================== -->
         <!-- Base styles for Start Bootstrap template SB Admin 2            -->
