--- a/cmd/web-app/templates/layouts/dtox.html
+++ b/cmd/web-app/templates/layouts/dtox.html
@@ -30,8 +30,8 @@
   <link href="{{ SiteAssetUrl "/dtox/css/style.css" }}" rel="stylesheet">
   
   <!--Favicon-->
-  <link rel="shortcut icon" type="image/png" href="{{ SiteAssetUrl "/images/remote-school-icon.png" }}">
-  <link rel="icon" type="image/png" href="{{ SiteAssetUrl "/images/remote-school-icon.png" }}">
+  <link rel="shortcut icon" type="image/jpeg" href="{{ SiteAssetUrl "/images/smarthead/smarthead-logo.jpeg" }}">
+  <link rel="icon" type="image/jpeg" href="{{ SiteAssetUrl "/images/smarthead/smarthead-logo.jpeg" }}">
 
    <!-- Global site tag (gtag.js) - Google Analytics -->
    <script async src="https://www.googletagmanager.com/gtag/js?id=UA-158909227-2"></script>
