--- a/cmd/web-app/templates/content/dtox-about.html
+++ b/cmd/web-app/templates/content/dtox-about.html
@@ -16,7 +16,7 @@ affordable interactive online private teaching and learning.{{end}}
         <h2 class="section-title">About us</h2>
       </div>
       <div class="col-lg-12 mb-100">
-        <p>Remoteschool.ng is a cloud-based learning platform that offers safe and affordable interactive 
+        <p>Smarthead.com.ng is a cloud-based learning platform that offers safe and affordable interactive 
           online and home (private tutoring).
           Our platform is designed to help teachers deliver content to learners, by taking advantage of the power of 
           technology and making learning worthwhile, fun and more engaging. It takes the best of what technology has to 
