--- a/cmd/web-app/templates/layouts/dtox.html
+++ b/cmd/web-app/templates/layouts/dtox.html
@@ -57,12 +57,6 @@
             <a class="nav-link {{block "aboutActive" .}}{{end}}" href="/about">About</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link page-scroll" href="/#team">Team</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link page-scroll" href="/#pricing">Pricing</a>
-          </li>
-          <li class="nav-item">
             <a class="nav-link {{block "contactActive" .}}{{end}}" href="/contact">Contact</a>
           </li>
           <li class="nav-item">
@@ -87,7 +81,7 @@
       <div class="col-lg-4 text-center text-lg-left mb-4 mb-lg-0">
         <!-- logo -->
         <a href="/">
-          <img class="img-fluid" src="{{ SiteAssetUrl "/images/Remote-school-logo-dark.png" }}" alt="Smart Head" style="height: 64px;">
+          <img class="img-fluid" src="{{ SiteAssetUrl "/images/smarthead/smarthead-dark.jpeg" }}" alt="Smart Head" style="height: 64px;">
         </a>
       </div>
       <!-- footer menu -->
@@ -95,8 +89,6 @@
         <ul class="list-inline text-lg-right text-center footer-menu">
           <li class="list-inline-item {{block "homeActive" .}}{{end}}"><a href="/">Home</a></li>
           <li class="list-inline-item {{block "aboutActive" .}}{{end}}"><a href="/about">About</a></li>
-          <li class="list-inline-item"><a class="page-scroll" href="/#team">Team</a></li>
-          <li class="list-inline-item"><a class="page-scroll" href="/#pricing">Pricing</a></li>
           <li class="list-inline-item {{block "contactActive" .}}{{end}}"><a href="/contact">Contact</a></li>
           <li class="list-inline-item {{block "contactActive" .}}{{end}}"><a href="/login">Login</a></li>
           <li class="list-inline-item {{block "contactActive" .}}{{end}}">
@@ -107,7 +99,7 @@
       <nav class="col-12">
         <ul class="list-inline text-lg-right text-center social-icon">
             <li class="list-inline-item">
-              <a class="facebook" href="https://web.facebook.com/onlineremoteschool/"><i class="ti-facebook"></i></a>
+              <a class="facebook" href="https://web.facebook.com/smartheadonline/"><i class="ti-facebook"></i></a>
             </li>
           <li class="list-inline-item">
             <a class="twitter" href="#"><i class="ti-twitter-alt"></i></a>
