--- a/cmd/web-app/templates/content/dtox-about.html
+++ b/cmd/web-app/templates/content/dtox-about.html
@@ -21,15 +21,29 @@ affordable interactive online private teaching and learning.{{end}}
           Our platform is designed to help teachers deliver content to learners, by taking advantage of the power of 
           technology and making learning worthwhile, fun and more engaging. It takes the best of what technology has to 
           offer and  deliver effective results for both teachers and students alike.</p>
-        <p>This platform was founded by a team of ICT and education experts who have the 21st century 
-          skills needed to deliver content and pedagogy. 
-          It is a cutting edge technology that assists your child learn with 99% guaranteed satisfaction.</p>
+          
           <p>
-          We bring this technology to your doorstep. Your child does not need the presence of a home  teacher to learn.
-           With the aid of an internet connection and a laptop or a mobile phone, your child would be paired to a tutor 
-           who will have live sessions with your child within an agreed time. That simple? Yes!!! 
-           Our team of teachers are experts with more than five(5) years of teaching experience and well disciplined in 
-           their area of specialization. 
+            Online education is actually affordable and reliable; with SMARTHEAD you get quality at an affordable price. 
+            I am not sure you will want to be in a hurry to return your child to school after the lookdown. 
+            SMARTHEAD is a virtual learning platform that provides live, interactive classes for students in secondary schools.
+             With as low as eight hundred naira (N1000) per subject in a month you child is already in school. 
+            You will spend less while still having control over the content of what your child is exposed to.
+          </p>
+
+          <p>
+            At SMARTHEAD we run two sessions’- morning (8am-1pm) and afternoon (2pm – 7pm) with break in between. 
+            Your child get to learn up to 12 to 13 subjects from Monday to Saturday and still have enough time to do other things.
+          </p>
+
+          <p>
+            With our professional teachers who are experts in their various disciplines expect nothing but the best.
+            SMARTHEAD is built on a 
+            foundation of integrity and we shall return your money to you after three days if you are not satisfied with our service. 
+          </p>
+
+          <p>
+            Visit us today at www.smarthead.com.ng or chat me up on 08069430990. It will take less than 10minutes to set up your child for class. 
+            You are strongly advised to get a 4G SIM, Wi-Fi or router of the best network in your area.   	
           </p>
       </div>
       <div class="col-lg-12">
