--- a/cmd/web-app/templates/content/dtox-index.html
+++ b/cmd/web-app/templates/content/dtox-index.html
@@ -66,11 +66,13 @@ affordable interactive online private teaching and learning.{{end}}
         <p>There is no need for your child to meet the teacher physically. 
             Our platform creates an online learning environment
            that gives the same experience as physical classroom.</p>
-        <p>We bring this technology to your doorstep. Your child 
-            does not need the presence of a home teacher to learn.<br/>
-            Out platform provides a 100% remote learning environment that 
-            gives the same interactive experience available in a physical class.
-        </p>
+           <p>
+            Online education is actually affordable and reliable; with SMARTHEAD you get quality at an affordable price. 
+            I am not sure you will want to be in a hurry to return your child to school after the lookdown. 
+            SMARTHEAD is a virtual learning platform that provides live, interactive classes for students in secondary schools.
+             With as low as eight hundred naira (N1000) per subject in a month you child is already in school. 
+            You will spend less while still having control over the content of what your child is exposed to.
+          </p>
       </div>
     </div>
   </div>
