--- a/cmd/web-app/templates/content/root-dashboard-students.gohtml
+++ b/cmd/web-app/templates/content/root-dashboard-students.gohtml
@@ -19,12 +19,6 @@
   <div class="col">
     <div class="card">
       <div class="card-body">
-        {{ if .sssThreeStudent }} 
-        <div class="alert alert-success mt-2 mb-3" role="alert">
-          Take advantage of our WAEC/NECO promo today. Just 10,000 Naira for all subjects.
-          <a href="https://paystack.com/pay/remote-school-waec-neco" class="btn btn-lg btn-danger" target="_blank">Make Payment Now</a>
-        </div>
-        {{ else }}
         <div class="jumbotron" data-controller="payment">
           {{ if eq (len .subscriptions) 0 }}
           <h1 class="display-4">Subscribe and start learning!</h1>
@@ -38,7 +32,7 @@
           <hr class="my-4" />
           <p>
             Select one or more subjects and click on the button below to make payment. Subscription cost is
-            <span class="naira">5,000</span> for one subject,
+            <span class="naira">1,000</span> per subject for five to nine subjects,
             <span class="naira">12,000</span> for three subjects,
             <span class="naira">15,000</span> for five subjects per month
           </p>
@@ -115,7 +109,6 @@
 
           </div>
         </div>
-        {{ end }}
 
         <p>
           {{ if isWorkHour }}
