--- a/cmd/web-app/templates/content/dtox-contact.html
+++ b/cmd/web-app/templates/content/dtox-contact.html
@@ -28,8 +28,8 @@ affordable interactive online private teaching and learning.{{end}}
             <div class="col-lg-5">
                 <p class="mb-5">
                   We are available 24/7 to respond to your enquiry.</p>
-                <a href="tel:+2347010007062" class="text-color h5 d-block">+234 (701) 000-7062</a>
-                <a href="mailto:onlineremoteschool@gmail.com" class="mb-5 text-color h5 d-block">onlineremoteschool@gmail.com</a>
+                <a href="tel:+2349038889931" class="text-color h5 d-block">+234 903 888 9931</a>
+                <a href="mailto:remoteschoolonline@gmail.com" class="mb-5 text-color h5 d-block">remoteschoolonline@gmail.com</a>
                 <p>50 Orile Road<br>Agege Lagos</p>
             </div>
         </div>
