--- a/cmd/web-app/templates/content/root-dashboard-students.gohtml
+++ b/cmd/web-app/templates/content/root-dashboard-students.gohtml
@@ -38,9 +38,8 @@
           <hr class="my-4" />
           <p>
             Select one or more subjects and click on the button below to make payment. Subscription cost is
-            <span class="naira">5,000</span> for one subject,
-            <span class="naira">12,000</span> for three subjects,
-            <span class="naira">15,000</span> for five subjects per month
+            <span class="naira">5,000</span> for primary school,
+            <span class="naira">10,000</span> for secondary school,
           </p>
           <div class="form-row">
             <div class="col-md-4 col-sm-12 mt-3">
