--- a/cmd/web-app/templates/content/dtox-index.html
+++ b/cmd/web-app/templates/content/dtox-index.html
@@ -201,121 +201,6 @@ affordable interactive online private teaching and learning.{{end}}
 </section>
 <!-- /feature -->
 
-
-<!-- team -->
-<section class="section-lg team" id="team">
-  <div class="container">
-    <div class="row">
-      <div class="col-lg-12 text-center">
-        <h2 class="section-title">Our Team</h2>
-        <p class="mb-100">Remote School is built on a solid foundation by a team of highly committed partners</p>
-      </div>
-    </div>
-    <div class="col-12">
-      <div class="team-slider">
-        <!-- team-member Anthony-->
-        <div class="team-member">
-            <div class="d-flex mb-4">
-              <div class="mr-3">
-                <img class="rounded-circle img-fluid" src="{{ SiteAssetUrl "/images/remote-school-team--xs-Anthony.jpg" }}" alt="team-member">
-              </div>
-              <div class="align-self-center">
-                <h4>Ademu Anthony</h4>
-                <h6 class="text-color">Director of IT & Innovation</h6>
-              </div>
-            </div>
-            <p style="text-align: justify;">
-              A seasoned Software Engineer who has been consistently praised by clients as competent, 
-              committed & hardworking.
-              An addicted/perpetual learner with an unquenchable thirst for innovation and technology.
-            </p>
-          </div>
-
-        <!-- team-member Abakpa-->
-        <div class="team-member">
-          <div class="d-flex mb-4">
-            <div class="mr-3">
-              <img class="rounded-circle img-fluid" src="{{ SiteAssetUrl "/images/remote-school-team--xs-Abakpa.jpg" }}" alt="team-member">
-            </div>
-            <div class="align-self-center">
-              <h4>Abakpa Joseph Elachi</h4>
-              <h6 class="text-color">Managing Director</h6>
-            </div>
-          </div>
-          <p style="text-align: justify;">
-            Mr Abakpa has a Bachelor of Science Honors degree in Physics
-            from the University of Agriculture Makurdi Benue State, Nigeria in 2012.
-            He has a Diploma in Software Engineering from Global Techs Institute Lagos.
-            
-          </p>
-        </div>
-        
-        <!-- team-member Afanabere-->
-        <div class="team-member">
-            <div class="d-flex mb-4">
-              <div class="mr-3">
-                <img class="rounded-circle img-fluid" src="{{ SiteAssetUrl "/images/remote-school-team--xs-Afanabere.jpg" }}" alt="team-member">
-              </div>
-              <div class="align-self-center">
-                <h4>Afanabere Bernard</h4>
-                <h6 class="text-color">Director Of Education</h6>
-              </div>
-            </div>
-            <p style="text-align: justify;">
-              Afanabere Bernard Akoshi is a trained educationist with more than a decade of working with students. 
-              He is a prolific writer, a teacher, a life coach, and a guest to many seminars and conferences.
-            </p>
-          </div>
-           
-        
-          <!-- team-member Raph-->
-        <div class="team-member">
-            <div class="d-flex mb-4">
-              <div class="mr-3">
-                <img class="rounded-circle img-fluid" src="{{ SiteAssetUrl "/images/remote-school-team-raphael-xs.jpg" }}" alt="team-member">
-              </div>
-              <div class="align-self-center">
-                <h4>Ikediashi Raphael</h4>
-                <h6 class="text-color">Director Of Sales & Marketing</h6>
-              </div>
-            </div>
-            <p style="text-align: justify;">
-              I'm Raphael, a software engineer based in Lagos, Nigeria. I enjoy creating things that live on the internet, 
-              whether that be websites, applications, or anything in between.        
-            </p>
-          </div>
-
-           <!-- team-member Onoja-->
-        
-           <div class="team-member">
-            <div class="d-flex mb-4">
-              <div class="mr-3">
-                <img class="rounded-circle img-fluid" src="{{ SiteAssetUrl "/images/remote-school-team--xs-onoja.jpg" }}" alt="team-member">
-              </div>
-              <div class="align-self-center">
-                <h4>Onoja Emmanuel</h4>
-                <h6 class="text-color">Director of Cloud Platform</h6>
-              </div>
-            </div>
-            <p style="text-align: justify;">
-              An expert in cloud base technologies with MS, MCTS & MCITP in Microsoft Office 365.
-              An experience teacher of Information Technology, Computer Science & Data Processing
-          </p>
-          </div>
-          
-      </div>
-    </div>
-  </div>
-  <!-- backgound image -->
-  <img src="{{ SiteAssetUrl "/dtox/images/backgrounds/team-bg.png" }}" alt="team-bg" class="img-fluid team-bg">
-  <!-- background shapes -->
-  <img class="team-bg-shape-1" src="{{ SiteAssetUrl "/dtox/images/background-shape/seo-ball-1.png" }}" alt="background-shape">
-  <img class="team-bg-shape-2" src="{{ SiteAssetUrl "/dtox/images/background-shape/seo-ball-1.png" }}" alt="background-shape">
-  <img class="team-bg-shape-3" src="{{ SiteAssetUrl "/dtox/images/background-shape/team-bg-triangle.png" }}" alt="background-shape">
-  <img class="team-bg-shape-4 img-fluid" src="{{ SiteAssetUrl "/dtox/images/background-shape/team-bg-dots.png" }}" alt="background-shape">
-</section>
-<!-- /team -->
-
 <!-- pricing -->
 <section class="section-lg pb-0 pricing" id="pricing">
   <div class="container">
@@ -324,48 +209,36 @@ affordable interactive online private teaching and learning.{{end}}
         <h2 class="section-title">Our Pricing</h2>
         <p class="mb-50">Our price is very affordable for online learning.<br/>
             Pay for any of the plans below and send the subject(s) of your choice to 
-            <a href="mailto:media@remoteschool.com.ng">media@remoteschool.com.ng</a>
+            <a href="mailto:remoteschoolonline@gmail.com">remoteschoolonline@gmail.com</a>
         </p>
       </div>
       <div class="col-lg-10 mx-auto">
         <div class="row justify-content-center">
           <!-- pricing table -->
-          <div class="col-md-6 col-lg-4 mb-5 mb-lg-0">
+          <div class="col-md-6 mb-5 mb-lg-0">
             <div class="rounded text-center pricing-table table-1">
-              <h3>One Subject</h3>
+              <h3>PRI 3 to 5</h3>
               <h1><span>₦</span>5,000</h1>
-              <p>Access to our interactive class
+              <p>
+                Access to our interactive class
                 Access to past video lectures
                 Email support
                 Whatsapp support
               </p>
-              <a href="https://paystack.com/pay/remoteschool-1-subject" class="btn pricing-btn">Pay</a>
+              <a href="https://paystack.com/pay/remoteschool-primary-school" class="btn pricing-btn">Pay</a>
             </div>
           </div>
           <!-- pricing table -->
-          <div class="col-md-6 col-lg-4 mb-5 mb-lg-0">
+          <div class="col-md-6 mb-5 mb-lg-0">
             <div class="rounded text-center pricing-table table-2">
-              <h3>Three Subjects</h3>
-              <h1><span>₦</span>12,000</h1>
+              <h3>Secondary School</h3>
+              <h1><span>₦</span>10,000</h1>
               <p>Access to our interactive class
                 Access to past video lectures
                 Email support
                 Whatsapp support
               </p>
-              <a href="https://paystack.com/pay/remoteschool-3-subject" class="btn pricing-btn">Pay</a>
-            </div>
-          </div>
-          <!-- pricing table -->
-          <div class="col-md-6 col-lg-4 mb-5 mb-lg-0">
-            <div class="rounded text-center pricing-table table-3">
-              <h3>Five Subject</h3>
-              <h1><span>₦</span>15,000</h1>
-              <p>Access to our interactive class
-                Access to past video lectures
-                Email support
-                Whatsapp support
-              </p>
-              <a href="https://paystack.com/pay/remoteschool-5-subject" class="btn pricing-btn">Pay</a>
+              <a href="https://paystack.com/pay/remoteschool-secondary-school" class="btn pricing-btn">Pay</a>
             </div>
           </div>
         </div>
