--- a/cmd/web-app/templates/content/dtox-index.html
+++ b/cmd/web-app/templates/content/dtox-index.html
@@ -217,13 +217,13 @@ affordable interactive online private teaching and learning.{{end}}
           <!-- pricing table -->
           <div class="col-md-6 mb-5 mb-lg-0">
             <div class="rounded text-center pricing-table table-1">
-              <h3>PRI 3 to 5</h3>
+              <h3>Primary 3 to 5</h3>
               <h1><span>₦</span>5,000</h1>
               <p>
-                Access to our interactive class
-                Access to past video lectures
-                Email support
-                Whatsapp support
+                Access to our interactive class<br/>
+                Access to past video lectures<br/>
+                Email support<br/>
+                Whatsapp support<br/>
               </p>
               <a href="https://paystack.com/pay/remoteschool-primary-school" class="btn pricing-btn">Pay</a>
             </div>
@@ -233,9 +233,9 @@ affordable interactive online private teaching and learning.{{end}}
             <div class="rounded text-center pricing-table table-2">
               <h3>Secondary School</h3>
               <h1><span>₦</span>10,000</h1>
-              <p>Access to our interactive class
-                Access to past video lectures
-                Email support
+              <p>Access to our interactive class<br/>
+                Access to past video lectures<br/>
+                Email support<br/>
                 Whatsapp support
               </p>
               <a href="https://paystack.com/pay/remoteschool-secondary-school" class="btn pricing-btn">Pay</a>
