--- a/cmd/web-app/templates/content/dtox-index.html
+++ b/cmd/web-app/templates/content/dtox-index.html
@@ -36,7 +36,7 @@ affordable interactive online private teaching and learning.{{end}}
                                   </select>
                               </div>
                               <div class="col-md-3 col-sm-12 mt-3">
-                                  <input data-target="root.name" name="name" required type="text" class="form-control" placeholder="Full Name">
+                                  <input data-target="root.name" name="name" required type="text" class="form-control" placeholder="Student's Full Name">
                               </div>
                               <div class="col-md-3 col-sm-12 mt-3">
                                   <input data-target="root.email" name="email" required type="email" class="form-control" placeholder="Email">
