--- a/resources/templates/shared/emails/payment_received.html
+++ b/resources/templates/shared/emails/payment_received.html
@@ -3,7 +3,7 @@
   <head>
     <meta name="viewport" content="width=device-width">
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
-    <title>Welcome to Remote School</title>
+    <title>Thank you for your payment</title>
     <style>
 @media only screen and (max-width: 620px) {
   table[class=body] h1 {
@@ -99,7 +99,7 @@ table[class=body] .article {
   </head>
   <body class="" style="background-color: #f6f6f6; font-family: sans-serif; -webkit-font-smoothing: antialiased; font-size: 14px; line-height: 1.4; margin: 0; padding: 0; -ms-text-size-adjust: 100%; -webkit-text-size-adjust: 100%;">
     <span class="preheader" style="color: transparent; display: none; height: 0; max-height: 0; max-width: 0; opacity: 0; overflow: hidden; mso-hide: all; visibility: hidden; width: 0;">
-        This is the information on how to access your free lessons
+      Thank you for your payment
     </span>
     <table role="presentation" border="0" cellpadding="0" cellspacing="0" class="body" style="border-collapse: separate; mso-table-lspace: 0pt; mso-table-rspace: 0pt; background-color: #f6f6f6; width: 100%;" width="100%" bgcolor="#f6f6f6">
       <tr>
@@ -117,13 +117,12 @@ table[class=body] .article {
                     <tr>
                       <td style="font-family: sans-serif; font-size: 14px; vertical-align: top;" valign="top">
                         <p style="font-family: sans-serif; font-size: 14px; font-weight: normal; margin: 0; margin-bottom: 15px;">Hi {{ .Name }},</p>
-                        <p style="font-family: sans-serif; font-size: 14px; font-weight: normal; margin: 0; margin-bottom: 15px;">Thank you for signing up on
+                        <p style="font-family: sans-serif; font-size: 14px; font-weight: normal; margin: 0; margin-bottom: 15px;">Thank you for your payment of {{ .Amount }} on
                             <a href="https://www.remoteschool.com.ng" target="_blank" style="color: #3498db; text-decoration: underline;">Remote School</a>.
                            </p>
-                        <p style="font-family: sans-serif; font-size: 14px; font-weight: normal; margin: 0; margin-bottom: 15px;">You have successfully unlocked you one week free lesson</p>
+                        <p style="font-family: sans-serif; font-size: 14px; font-weight: normal; margin: 0; margin-bottom: 15px;">You have successfully subscribed for our one month online lesson.</p>
                         <p style="font-family: sans-serif; font-size: 14px; font-weight: normal; margin: 0; margin-bottom: 15px;"> 
-                            Use the following information to access your free Remote School account<br>
-                            <b>Email</b>: {{ .Email }} <b>Password</b>: {{ .Password }}
+                            Please login to your dashboard with your email and password to view the time of your classes
                         </p>
                         <table role="presentation" border="0" cellpadding="0" cellspacing="0" class="btn btn-primary" style="border-collapse: separate; mso-table-lspace: 0pt; mso-table-rspace: 0pt; box-sizing: border-box; width: 100%;" width="100%">
                           <tbody>
@@ -132,7 +131,7 @@ table[class=body] .article {
                                 <table role="presentation" border="0" cellpadding="0" cellspacing="0" style="border-collapse: separate; mso-table-lspace: 0pt; mso-table-rspace: 0pt; width: auto;">
                                   <tbody>
                                     <tr>
-                                      <td style="font-family: sans-serif; font-size: 14px; vertical-align: top; border-radius: 5px; text-align: center; background-color: #3498db;" valign="top" align="center" bgcolor="#3498db"> <a href="https://www.remoteschool.com.ng/login" target="_blank" style="border: solid 1px #3498db; border-radius: 5px; box-sizing: border-box; cursor: pointer; display: inline-block; font-size: 14px; font-weight: bold; margin: 0; padding: 12px 25px; text-decoration: none; text-transform: capitalize; background-color: #3498db; border-color: #3498db; color: #ffffff;">Login</a> </td>
+                                      <td style="font-family: sans-serif; font-size: 14px; vertical-align: top; border-radius: 5px; text-align: center; background-color: #3498db;" valign="top" align="center" bgcolor="#3498db"> <a href="https://remoteschool.com.ng/user/login" target="_blank" style="border: solid 1px #3498db; border-radius: 5px; box-sizing: border-box; cursor: pointer; display: inline-block; font-size: 14px; font-weight: bold; margin: 0; padding: 12px 25px; text-decoration: none; text-transform: capitalize; background-color: #3498db; border-color: #3498db; color: #ffffff;">Login</a> </td>
                                     </tr>
                                   </tbody>
                                 </table>
@@ -140,70 +139,6 @@ table[class=body] .article {
                             </tr>
                           </tbody>
                         </table>
-                        
-                      
-                          <h3>How to join the class</h3>
-                          <p style="font-family: sans-serif; font-size: 14px; font-weight: normal; margin: 0; margin-bottom: 15px;">
-                            You can join the class using a computer, tablet or mobile phone. See
-                            instruction below
-                          </p>
-                      
-                          <b>MOBILE PHONES/TABLETS:</b><br>
-                      
-                          <ul style="font-family: sans-serif; font-size: 14px; font-weight: normal; margin: 0; margin-bottom: 15px;">
-                            <ol style="font-family: sans-serif; font-size: 14px; font-weight: normal; margin: 0; margin-bottom: 15px;">
-                              Download Microsoft Teams from Playstore  and install on your phone
-                            </ol>
-                            <ol style="font-family: sans-serif; font-size: 14px; font-weight: normal; margin: 0; margin-bottom: 15px;">
-                                <a href="https://remoteschool.com.ng/user/login" target="_blank" style="color: #3498db; text-decoration: underline;">Login</a> to 
-                                https://www.remoteschool.com.ng using the details provided above.
-                            </ol>
-                            <ol style="font-family: sans-serif; font-size: 14px; font-weight: normal; margin: 0; margin-bottom: 15px;">
-                              Click Join Classroom on the lesson you want to join.
-                               Note: the button will only appear during the time of the class
-                            </ol>
-                            <ol style="font-family: sans-serif; font-size: 14px; font-weight: normal; margin: 0; margin-bottom: 15px;">
-                              Enter your Name and click Join
-                            </ol>
-                          </ul>
-                          <p style="font-family: sans-serif; font-size: 14px; font-weight: normal; margin: 0; margin-bottom: 15px;">
-                            You will see a message that says “someone in  the meeting will let you in
-                            soon”. At this point wait patiently.
-                          </p>
-                      
-                          <b>LAPTOP OR DESKTOP COMPUTER:</b><br>
-                          <ul style="font-family: sans-serif; font-size: 14px; font-weight: normal; margin: 0; margin-bottom: 15px;">
-                            <ol style="font-family: sans-serif; font-size: 14px; font-weight: normal; margin: 0; margin-bottom: 15px;">
-                              Download Google Chrome browser and install (if not already installed) or
-                              installed Microsoft Teams  on your
-                              computer(from https://www.microsoft.com/en-us/microsoft-365/microsoft-teams/download-app
-                            </ol>
-                            <ol style="font-family: sans-serif; font-size: 14px; font-weight: normal; margin: 0; margin-bottom: 15px;">
-                                <a href="https://www.remoteschool.com.ng/login" target="_blank" style="color: #3498db; text-decoration: underline;">Login</a> to 
-                                https://www.remoteschool.com.ng using the details provided above.
-                            </ol>
-                            <ol style="font-family: sans-serif; font-size: 14px; font-weight: normal; margin: 0; margin-bottom: 15px;">
-                              Click Join Classroom on the lesson you want to join.
-                               Note: the button will only appear during the time of the class
-                            </ol>
-                            <ol style="font-family: sans-serif; font-size: 14px; font-weight: normal; margin: 0; margin-bottom: 15px;">
-                              Click on  use web app instead
-                            </ol>
-                            <ol style="font-family: sans-serif; font-size: 14px; font-weight: normal; margin: 0; margin-bottom: 15px;">
-                              Enter your name and click join
-                            </ol>
-                          </ul>
-                          <p style="font-family: sans-serif; font-size: 14px; font-weight: normal; margin: 0; margin-bottom: 15px;">
-                            You will see a message that says “someone in the meeting will let you in
-                            soon”. At this point wait patiently.
-                          </p>
-                          <br>
-                          <p style="font-family: sans-serif; font-size: 14px; font-weight: normal; margin: 0; margin-bottom: 15px;">
-                            NOTE: Practice to ensure that you reach this point (someone in the meeting
-                            will let you in soon) before the actual time for the lesson. If you
-                            encounter any issue, call 08034282143 before the lesson starts. Thanks
-                          </p>
-
                       </td>
                     </tr>
                   </table>
@@ -222,6 +157,7 @@ table[class=body] .article {
                     <span class="apple-link" style="color: #999999; font-size: 12px; text-align: center;"><a href="https://www.remoteschool.com.ng" style="text-decoration: underline; color: #999999; font-size: 12px; text-align: center;">Remote School</a>, 50 Orile Road, Agege Lagos</span>
                     <span class="apple-link" style="color: #999999; font-size: 12px; text-align: center;">https://www.remoteschool.com.ng</span>
                     <span class="apple-link" style="color: #999999; font-size: 12px; text-align: center;">+234 903 888 9931</span>
+                    
                   </td>
                 </tr>
                 <tr>
