--- a/resources/templates/shared/emails/payment_received.raw.html
+++ b/resources/templates/shared/emails/payment_received.raw.html
@@ -3,7 +3,7 @@
   <head>
     <meta name="viewport" content="width=device-width" />
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
-    <title>Welcome to Remote School</title>
+    <title>Thank you for your payment</title>
     <style>
       /* -------------------------------------
           GLOBAL RESETS
@@ -334,7 +334,7 @@
   </head>
   <body class="">
     <span class="preheader">
-        This is the information on how to access your free lessons
+      Thank you for your payment
     </span>
     <table role="presentation" border="0" cellpadding="0" cellspacing="0" class="body">
       <tr>
@@ -352,13 +352,12 @@
                     <tr>
                       <td>
                         <p>Hi {{ .Name }},</p>
-                        <p>Thank you for signing up on
+                        <p>Thank you for your payment of {{ .Amount }} on
                             <a href="https://www.remoteschool.com.ng" target="_blank">Remote School</a>.
                            </p>
-                        <p>You have successfully unlocked you one week free lesson</p>
+                        <p>You have successfully subscribed for our one month online lesson.</p>
                         <p> 
-                            Use the following information to access your free Remote School account<br/>
-                            <b>Email</b>: {{ .Email }} <b>Password</b>: {{ .Password }}
+                            Please login to your dashboard with your email and password to view the time of your classes
                         </p>
                         <table role="presentation" border="0" cellpadding="0" cellspacing="0" class="btn btn-primary">
                           <tbody>
@@ -375,70 +374,6 @@
                             </tr>
                           </tbody>
                         </table>
-                        
-                      
-                          <h3>How to join the class</h3>
-                          <p>
-                            You can join the class using a computer, tablet or mobile phone. See
-                            instruction below
-                          </p>
-                      
-                          <b>MOBILE PHONES/TABLETS:</b><br />
-                      
-                          <ul>
-                            <ol>
-                              Download Microsoft Teams from Playstore  and install on your phone
-                            </ol>
-                            <ol>
-                                <a href="https://www.remoteschool.com.ng/login" target="_blank">Login</a> to 
-                                https://www.remoteschool.com.ng using the details provided above.
-                            </ol>
-                            <ol>
-                              Click Join Classroom on the lesson you want to join.
-                               Note: the button will only appear during the time of the class
-                            </ol>
-                            <ol>
-                              Enter your Name and click Join
-                            </ol>
-                          </ul>
-                          <p>
-                            You will see a message that says “someone in  the meeting will let you in
-                            soon”. At this point wait patiently.
-                          </p>
-                      
-                          <b>LAPTOP OR DESKTOP COMPUTER:</b><br />
-                          <ul>
-                            <ol>
-                              Download Google Chrome browser and install (if not already installed) or
-                              installed Microsoft Teams  on your
-                              computer(from https://www.microsoft.com/en-us/microsoft-365/microsoft-teams/download-app
-                            </ol>
-                            <ol>
-                                <a href="https://www.remoteschool.com.ng/login" target="_blank">Login</a> to 
-                                https://www.remoteschool.com.ng using the details provided above.
-                            </ol>
-                            <ol>
-                              Click Join Classroom on the lesson you want to join.
-                               Note: the button will only appear during the time of the class
-                            </ol>
-                            <ol>
-                              Click on  use web app instead
-                            </ol>
-                            <ol>
-                              Enter your name and click join
-                            </ol>
-                          </ul>
-                          <p>
-                            You will see a message that says “someone in the meeting will let you in
-                            soon”. At this point wait patiently.
-                          </p>
-                          <br />
-                          <p>
-                            NOTE: Practice to ensure that you reach this point (someone in the meeting
-                            will let you in soon) before the actual time for the lesson. If you
-                            encounter any issue, call 08034282143 before the lesson starts. Thanks
-                          </p>
-
                       </td>
                     </tr>
                   </table>
@@ -457,6 +392,7 @@
                     <span class="apple-link"><a href="https://www.remoteschool.com.ng">Remote School</a>, 50 Orile Road, Agege Lagos</span>
                     <span class="apple-link">https://www.remoteschool.com.ng</span>
                     <span class="apple-link">+234 903 888 9931</span>
+                    
                   </td>
                 </tr>
                 <tr>
