Subject school order

--- a/cmd/web-app/templates/content/admin-subjects-create.gohtml
+++ b/cmd/web-app/templates/content/admin-subjects-create.gohtml
@@ -31,6 +31,16 @@
                             {{template "invalid-feedback" dict "fieldName" "Name" "validationDefaults" $.validationDefaults "validationErrors" $.validationErrors }}
                         </div>
                     </div>
+
+                    <div class="col-md-6">
+                        <div class="form-group">
+                            <label for="inputName">School Order (comma separated - 0 = Primary, 1 = Secondary)</label>
+                            <input type="text" id="inputName"
+                                   class="form-control {{ ValidationFieldClass $.validationErrors "SchoolOrder" }}"
+                                   placeholder="Enter school order - 0,1" name="SchoolOrder" value="{{ .form.SchoolOrder }}" required>
+                            {{template "invalid-feedback" dict "fieldName" "Name" "validationDefaults" $.validationDefaults "validationErrors" $.validationErrors }}
+                        </div>
+                    </div>
                 </div>
             </div>
         </div>
