Subject school order

--- a/cmd/web-app/templates/content/admin-subjects-update.gohtml
+++ b/cmd/web-app/templates/content/admin-subjects-update.gohtml
@@ -40,7 +40,7 @@
 
                     <div class="col-md-6">
                         <div class="form-group">
-                            <label for="inputName">School Order (comma separated - 0 = Primary, 1 = Secondary)</label>
+                            <label for="inputName">School Order (comma separated - 0 = Primary, 1 = JS, 2 = SS)</label>
                             <input type="text" id="inputName"
                                    class="form-control {{ ValidationFieldClass $.validationErrors "SchoolOrder" }}"
                                    placeholder="Enter school order - 0,1" name="SchoolOrder" value="{{ .form.SchoolOrder }}" required>
