--- a/cmd/web-app/templates/content/admin-subjects-create.gohtml
+++ b/cmd/web-app/templates/content/admin-subjects-create.gohtml
@@ -22,6 +22,7 @@
             <div class="card-body">
 
                 <div class="row">
+                    
                     <div class="col-md-6">
                         <div class="form-group">
                             <label for="inputName">Subject Name</label>
@@ -34,13 +35,14 @@
 
                     <div class="col-md-6">
                         <div class="form-group">
-                            <label for="inputName">School Order (comma separated - 0 = Primary, 1 = Secondary)</label>
+                            <label for="inputName">School Order (comma separated - 0 = Primary, 1 = JS, 2 = SS)</label>
                             <input type="text" id="inputName"
                                    class="form-control {{ ValidationFieldClass $.validationErrors "SchoolOrder" }}"
                                    placeholder="Enter school order - 0,1" name="SchoolOrder" value="{{ .form.SchoolOrder }}" required>
                             {{template "invalid-feedback" dict "fieldName" "Name" "validationDefaults" $.validationDefaults "validationErrors" $.validationErrors }}
                         </div>
                     </div>
+
                 </div>
             </div>
         </div>
