--- a/cmd/web-app/templates/content/root-dashboard-students.gohtml
+++ b/cmd/web-app/templates/content/root-dashboard-students.gohtml
@@ -31,7 +31,8 @@
         <p>
           {{ if isWorkHour }}
           Enter the virtual class room to see how it works <br>
-          <a href="https://bit.ly/remote-school-f-free-math" target="_blank" class="btn btn-primary btn-lg">Go to Classroom</a>
+          <a href="https://teams.microsoft.com/l/meetup-join/19%3ameeting_NDdmNTkyZjUtZDRkZC00N2YzLWE0YjItYjFhMjkxYzcwYzY1%40thread.v2/0?context=%7b%22Tid%22%3a%223169d2a2-b883-4e7d-9efd-b54ca503d9b7%22%2c%22Oid%22%3a%223b3673f8-b3c4-4338-9391-3bf7682449a4%22%7d" 
+          target="_blank" class="btn btn-primary btn-lg">Go to Classroom</a>
           {{ end }}
         </p>
 
