WhatsApp link on thank you

--- a/cmd/web-app/templates/content/dtox-thank-you.html
+++ b/cmd/web-app/templates/content/dtox-thank-you.html
@@ -16,7 +16,11 @@ affordable interactive online private teaching and learning.{{end}}
         <h2 class="section-title">Thank You</h2>
       </div>
       <div class="col-lg-12 mb-1">
-        <p>Thank you for your interest in our classes. Please check your email for instruction on how to join the free classes.</p>    
+        <p>Thank you for your interest in our classes. Please check your email for instruction on how to join the free classes.</p>
+        <p>
+          Chat with us on WhatsApp for further assistance.
+          <a href="{{ .whatsAppLink }}" class="btn btn-lg btn-success">Get Help on Whatsapp</a>
+         </p>    
       </div>
       <div class="col-lg-12">
         <!-- about video -->
